--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
   "changelog": [
     ""
   ],
-  "apkUrl": "https://github.com/Fisny/NT_manifest/releases/download/com.companyname.navaltest.apk",
+  "apkUrl": "https://github.com/Fisny/NT_manifest/releases/download/",
   "apkSha256": "APK_SHA_256"
 }
