--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
   "changelog": [
     ""
   ],
-  "apkUrl": "https://drive.google.com/drive/folders/1C3d5nF_2dSU2Cg-m0Mp5aYvqxMbfjgAq?hl=it",
+  "apkUrl": "https://github.com/Fisny/NT_manifest/blob/main/releases/download/com.companyname.navaltest.apk",
   "apkSha256": "APK_SHA_256"
 }
