--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,6 @@
   "versionCode": 11010,
   "minSupported": 111,
   "changelog": [ "" ],
-  "testerPortalUrl": "https://appdistribution.firebase.dev"
+  "testerPortalUrl": "https://appdistribution.firebase.dev",
+  "wpfVersion": 1.0.001
 }
